--- a/encriptador/styles/style.css
+++ b/encriptador/styles/style.css
@@ -62,9 +62,7 @@ main{
   height: 650px;
   margin: 35px 0 0 200px;
   background: #FFF;
-  background-image: url(/encriptador/images/pesquisador.png);
   background-repeat: no-repeat;
-  background-position: 30px 80px;
   border: none;
   border-radius: 24px;
   color: #0a3871;
@@ -84,12 +82,20 @@ main{
   text-align: center;
 }
 
+.result img{
+  margin: 105px 0 0 -345px;
+  background-repeat: no-repeat;
+  width: 300px;
+  height: 300px;
+  background-color: #FFF;
+}
+
 .result h6{
   font-size: 24px;
   font-weight: 700;
   width: 336px;
   height: 58px;
-  margin: 430px 0 0 -350px;
+  margin: 430px 0 0 -320px;
   background-color: #FFF;
 }
 
