--- a/encriptador/styles/style.css
+++ b/encriptador/styles/style.css
@@ -31,6 +31,11 @@ main{
   margin-top: 290px;
 }
 
+.informacao i{
+  font-size: 16px;
+  color: #495057;
+}
+
 .botoes{
   display: flex;
   margin-top: 10px;
@@ -61,11 +66,12 @@ main{
   width: 400px;
   height: 650px;
   margin: 35px 0 0 200px;
+  padding: 10px 0 0 15px;
   background: #FFF;
   background-repeat: no-repeat;
   border: none;
   border-radius: 24px;
-  color: #0a3871;
+  color: #495057;
 }
 
 .mensagem:focus{
@@ -83,7 +89,7 @@ main{
 }
 
 .result img{
-  margin: 105px 0 0 -345px;
+  margin: 145px 0 0 -345px;
   background-repeat: no-repeat;
   width: 300px;
   height: 300px;
@@ -95,7 +101,7 @@ main{
   font-weight: 700;
   width: 336px;
   height: 58px;
-  margin: 430px 0 0 -320px;
+  margin: 470px 0 0 -320px;
   background-color: #FFF;
 }
 
@@ -104,7 +110,7 @@ main{
   height: 58px;
   color: #343A40;
   font-size: 14px;
-  margin: 500px 0 0 -300px;
+  margin: 540px 0 0 -300px;
   background-color: #FFF;
 }
 
